tests/type_sig_merge/async_void_return-export.js
export const f = async () => {};

f() as empty; // error: Promise ~> empty
